gcc/testsuite/algol68/compile/error-nest-5.a68
begin int lala = nest C "&lala"; { dg-error "name" }
      skip
end
